// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhaseProgress Component renders correctly 1`] = `
.emotion-0 {
  background-color: #f7f7f7;
}

.emotion-0.progress-chart-container .progress-step {
  border: none;
  position: absolute;
}

.emotion-0 .progress-step-total .progress-bar {
  background-color: #d4e9e7;
}

.emotion-0.stepped-progress .progress-step-total .progress-bar {
  background-color: #fff;
  border-color: #a9a9a9;
}

.emotion-1 {
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  margin-bottom: -20px;
}

.emotion-2 {
  display: grid;
  row-gap: 4px;
  place-items: center;
  position: absolute;
  grid-template-rows: 20px 1.25rem min-content;
}

.emotion-2.compact {
  grid-template-rows: 45px 1.25rem min-content;
}

.emotion-3 {
  border-left-style: solid;
  border-left-width: 1px;
  height: 100%;
  z-index: 1;
}

.emotion-4 {
  border-left-color: #e9e9e9;
}

.emotion-5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
}

.emotion-5 iconButton {
  margin-right: 8px;
}

.emotion-15 {
  position: initial;
  width: 110%;
}

<div>
  <div
    class="flexbox column "
  >
    <div
      class="progress-chart-container stepped-progress emotion-0"
      style="background: none;"
    >
      Phase 1: 
      100
      % (
      1
       
      device
      )
      <div
        class="progress-chart detailed"
      >
        <div
          class="progress-step"
          style="width: 25%; height: 100%; left: 0%;"
        >
          <div
            class="flexbox"
            style="width: 100%;"
          >
            <div
              class="progress-bar green"
              style="width: 100%;"
            />
            <div
              class="progress-bar warning"
              style="width: 0%;"
            />
          </div>
          <div
            class="progress-step-number emotion-1"
          >
            download
          </div>
        </div>
        <div
          class="emotion-2 compact"
          style="left: 12.5%; width: 25%;"
        >
          <div
            class="emotion-3 emotion-4"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-5"
            data-testid="CheckCircleIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
            />
          </svg>
          <div />
        </div>
        <div
          class="progress-step"
          style="width: 25%; height: 100%; left: 25%;"
        >
          <div
            class="flexbox"
            style="width: 100%;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="width: 0%;"
            />
          </div>
          <div
            class="progress-step-number emotion-1"
          >
            install
          </div>
        </div>
        <div
          class="emotion-2 compact"
          style="left: 37.5%; width: 25%;"
        >
          <div
            class="emotion-3 emotion-4"
          />
          <div />
          <div />
        </div>
        <div
          class="progress-step"
          style="width: 25%; height: 100%; left: 50%;"
        >
          <div
            class="flexbox"
            style="width: 100%;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="width: 0%;"
            />
          </div>
          <div
            class="progress-step-number emotion-1"
          >
            reboot
          </div>
        </div>
        <div
          class="emotion-2 compact"
          style="left: 62.5%; width: 25%;"
        >
          <div
            class="emotion-3 emotion-4"
          />
          <div />
          <div />
        </div>
        <div
          class="progress-step"
          style="width: 25%; height: 100%; left: 75%;"
        >
          <div
            class="flexbox"
            style="width: 100%;"
          >
            <div
              class="progress-bar green"
              style="width: 0%;"
            />
            <div
              class="progress-bar warning"
              style="width: 0%;"
            />
          </div>
          <div
            class="progress-step-number emotion-1"
          >
            commit
          </div>
        </div>
        <div
          class="progress-step progress-step-total"
          style="height: 100%;"
        >
          <div
            class="progress-bar emotion-15"
          />
        </div>
      </div>
    </div>
    <div
      class="margin-top"
    >
      Deployment is 
      <span
        class="uppercased"
      >
        Pending
      </span>
       with 
      0
       
      failures
    </div>
  </div>
</div>
`;

exports[`PhaseProgress Component renders correctly for list usage 1`] = `
.emotion-0 {
  background-color: #f7f7f7;
}

.emotion-0.progress-chart-container .progress-step {
  border: none;
  position: absolute;
}

.emotion-0 .progress-step-total .progress-bar {
  background-color: #d4e9e7;
}

.emotion-0.stepped-progress .progress-step-total .progress-bar {
  background-color: #fff;
  border-color: #a9a9a9;
}

.emotion-1 {
  margin-bottom: 8px;
}

.emotion-2 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: inherit;
}

.emotion-2 iconButton {
  margin-right: 8px;
}

.emotion-3 {
  margin: 4px;
}

.emotion-4 {
  display: grid;
  row-gap: 4px;
  place-items: center;
  position: absolute;
  grid-template-rows: 20px 1.25rem min-content;
}

.emotion-4.compact {
  grid-template-rows: 45px 1.25rem min-content;
}

.emotion-5 {
  border-left-style: solid;
  border-left-width: 1px;
  height: 100%;
  z-index: 1;
}

.emotion-6 {
  border-left-color: #e9e9e9;
}

.emotion-7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
}

.emotion-7 iconButton {
  margin-right: 8px;
}

.emotion-14 {
  position: initial;
  width: 110%;
}

<div>
  <div
    class="progress-chart-container flexbox column stepped-progress  emotion-0"
  >
    <div
      class="flexbox space-between emotion-1"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-2"
        data-testid="PlayArrowIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8 5v14l11-7z"
        />
      </svg>
      <div
        class="flexbox center-aligned"
      >
        0 failures
      </div>
    </div>
    <div
      class="muted slightly-smaller emotion-3"
    >
      Phase 1 of 1
    </div>
    <div
      class="progress-chart "
      style="max-width: 90%; min-height: 65px;"
    >
      <div
        class="progress-step"
        style="width: 25%; left: 0%;"
      >
        <div
          class="flexbox"
          style="width: 100%;"
        >
          <div
            class="progress-bar green"
            style="width: 100%;"
          />
          <div
            class="progress-bar warning"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="emotion-4 "
        style="left: 12.5%; width: 25%;"
      >
        <div
          class="emotion-5 emotion-6"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-7"
          data-testid="CheckCircleIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
          />
        </svg>
        <div
          class="capitalized slightly-smaller"
        >
          downloaded
        </div>
      </div>
      <div
        class="progress-step"
        style="width: 25%; left: 25%;"
      >
        <div
          class="flexbox"
          style="width: 100%;"
        >
          <div
            class="progress-bar green"
            style="width: 0%;"
          />
          <div
            class="progress-bar warning"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="emotion-4 "
        style="left: 37.5%; width: 25%;"
      >
        <div
          class="emotion-5 emotion-6"
        />
        <div />
        <div
          class="capitalized slightly-smaller"
        >
          installed
        </div>
      </div>
      <div
        class="progress-step"
        style="width: 25%; left: 50%;"
      >
        <div
          class="flexbox"
          style="width: 100%;"
        >
          <div
            class="progress-bar green"
            style="width: 0%;"
          />
          <div
            class="progress-bar warning"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="emotion-4 "
        style="left: 62.5%; width: 25%;"
      >
        <div
          class="emotion-5 emotion-6"
        />
        <div />
        <div
          class="capitalized slightly-smaller"
        >
          rebooted
        </div>
      </div>
      <div
        class="progress-step"
        style="width: 25%; left: 75%;"
      >
        <div
          class="flexbox"
          style="width: 100%;"
        >
          <div
            class="progress-bar green"
            style="width: 0%;"
          />
          <div
            class="progress-bar warning"
            style="width: 0%;"
          />
        </div>
      </div>
      <div
        class="progress-step progress-step-total"
      >
        <div
          class="progress-bar emotion-14"
        />
      </div>
    </div>
  </div>
</div>
`;
